--- a/Setup/Applications/ken_App/Environments/jobvitez1280Env/Index.yaml
+++ b/Setup/Applications/ken_App/Environments/jobvitez1280Env/Index.yaml
@@ -1,3 +1,8 @@
 harnessApiVersion: '1.0'
 type: ENVIRONMENT
 environmentType: PROD
+variableOverrides:
+- name: var1
+  serviceName: jobvitez1280Service
+  value: B
+  valueType: TEXT
