--- a/Setup/Applications/ken_App/Environments/jobvitez1280Env/Index.yaml
+++ b/Setup/Applications/ken_App/Environments/jobvitez1280Env/Index.yaml
@@ -4,5 +4,5 @@ environmentType: PROD
 variableOverrides:
 - name: var1
   serviceName: jobvitez1280Service
-  value: C
+  value: B
   valueType: TEXT
