--- a/Setup/Applications/ken_App/Workflows/traininguser2workflow.yaml
+++ b/Setup/Applications/ken_App/Workflows/traininguser2workflow.yaml
@@ -26,8 +26,10 @@ phases:
     - type: AWS_NODE_SELECT
       name: AwsNodeSelect
       properties:
+        hostNames:
+        - ec2-54-88-142-14.compute-1.amazonaws.com
         excludeSelectedHostsFromFuturePhases: true
-        specificHosts: false
+        specificHosts: true
     stepsInParallel: false
   - type: DISABLE_SERVICE
     name: Disable Service
