Harness IO Git Sync. MODIFY: Setup/Applications/ken_App/Pipelines/iherb_z1283_PL.yaml

--- a/Setup/Applications/ken_App/Pipelines/iherb_z1283_PL.yaml
+++ b/Setup/Applications/ken_App/Pipelines/iherb_z1283_PL.yaml
@@ -5,3 +5,7 @@ pipelineStages:
   name: traininguser1workflow
   parallel: false
   workflowName: traininguser1workflow
+- type: ENV_STATE
+  name: traininguser2workflow
+  parallel: false
+  workflowName: traininguser2workflow
