Harness IO Git Sync. MODIFY: Setup/Applications/ken_App/Services/beachbodyService/Commands/KenCommandOriginal.yaml

--- a/Setup/Applications/ken_App/Services/beachbodyService/Commands/KenCommandOriginal.yaml
+++ b/Setup/Applications/ken_App/Services/beachbodyService/Commands/KenCommandOriginal.yaml
@@ -1,4 +1,10 @@
 harnessApiVersion: '1.0'
 type: OTHER
 commandUnitType: COMMAND
+commandUnits:
+- command: 'echo "this is a test #1"'
+  commandUnitType: EXEC
+  deploymentType: SSH
+  name: Exec
+  scriptType: BASH
 targetToAllEnv: true
