--- a/Setup/Applications/ken_App/Workflows/beachbody_workflow.yaml
+++ b/Setup/Applications/ken_App/Workflows/beachbody_workflow.yaml
@@ -36,6 +36,11 @@ phases:
     stepsInParallel: false
   - type: DEPLOY_SERVICE
     name: Deploy Service
+    steps:
+    - type: COMMAND
+      name: KenCommandOriginal
+      properties:
+        commandName: KenCommandOriginal
     stepsInParallel: false
   - type: ENABLE_SERVICE
     name: Enable Service
