--- a/Setup/Applications/ken_App/Services/beachbodyService/Commands/KenCommand2.yaml
+++ b/Setup/Applications/ken_App/Services/beachbodyService/Commands/KenCommand2.yaml
@@ -1,4 +1,10 @@
 harnessApiVersion: '1.0'
 type: OTHER
 commandUnitType: COMMAND
+commandUnits:
+- command: echo "this is 2nd command"
+  commandUnitType: EXEC
+  deploymentType: SSH
+  name: Exec
+  scriptType: BASH
 targetToAllEnv: true
