Harness IO Git Sync. MODIFY: Setup/Applications/ken_App/Workflows/beachbody_workflow.yaml

--- a/Setup/Applications/ken_App/Workflows/beachbody_workflow.yaml
+++ b/Setup/Applications/ken_App/Workflows/beachbody_workflow.yaml
@@ -44,6 +44,11 @@ phases:
     stepsInParallel: false
   - type: ENABLE_SERVICE
     name: Enable Service
+    steps:
+    - type: COMMAND
+      name: KenCommandOriginal
+      properties:
+        commandName: KenCommandOriginal
     stepsInParallel: false
   - type: VERIFY_SERVICE
     name: Verify Service
